# convert-images-google-drive-to-seo-optimized-webp

./: .dev.vars  .env.backup  .env.example  .gitignore  .wranglerignore  README.md  biome.json  cf-requirements.txt  cli.py  delete_youtube_token.py  dev.db  get_google_token.py  google-apps-script-plan.md  image_processor.py  jwt.py  main.py  package-lock.json  package.json  pillow_heif.py  pipeline_analysis.md  plan.md  pyproject.toml  requirements.txt  run_api.py  simple_http.py  tailwind.config.js  test_api_with_token.py  test_free_proxies_local.py  test_youtube_curl.sh  test_youtube_transcript_proxy.py  wrangler.toml  youtube-transcript-proxy-api.md
PIL/: __init__.py
api/: app_factory.py  app_logging.py  auth.py  cloudflare_queue.py  config.py  crypto.py  database.py  deps.py  drive_workspace.py  exceptions.py  google_oauth.py  main.py  middleware.py  models.py  notifications.py  notifications_stream.py  protected.py  public.py  steps.py  utils.py  web.py
core/: ai_modules.py  audio_fetch.py  constants.py  drive_utils.py  extension_utils.py  filename_utils.py  google_async.py  google_clients.py  google_docs_text.py  image_processor.py  transcripts.py  url_utils.py  youtube_api.py  youtube_captions.py
docs/: AUTH_LOGIN_500_ANALYSIS.md  CLOUDFLARE_WORKERS_PYTHON_GOTCHAS.md  DEPLOYMENT.md  DISABLED_FEATURES.md  FREE_PROXY_PLAN.md  FRONTEND_ANALYSIS_AND_DESIGN_BRIEF.md  MIGRATE_NOTIFICATIONS_SSE_TO_POLLING.md  NEXT_STEPS.md  (+16 more)
working-example/: README.md  find_proxies.py  proxy_manager.py  pyproject.toml  requirements.txt  test_transcript.py  unified_transcript.py
working-example/youtube_transcript/: __init__.py  cli.py  logger.py  transcript.py
(+298 files in other folders)
