[project]
name = "quill-api"
version = "0.1.0"
description = "Production-ready API for optimizing images from Google Drive to WebP format"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2,<0.122.0",
    "starlette>=0.49.3,<0.50.0",
    "pydantic>=2.12.4,<2.13.0",
    "pydantic-settings>=2.12.0,<2.13.0",
    "httpx>=0.28.1,<0.29.0",
    "google-auth>=2.43.0,<2.44.0",
    "google-auth-oauthlib>=1.2.2,<1.3.0",
    "tqdm>=4.67.1,<4.68.0",
]

[dependency-groups]
dev = [
    "workers-py>=1.7.0,<1.8.0",
]

[tool.pytest.ini_options]
markers = [
    "autopilot_enabled: enable autopilot-dependent behavior in tests",
]
