[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-transcript"
version = "0.1.0"
description = "YouTube transcript retrieval service"
requires-python = ">=3.8"
dependencies = [
    "youtube-transcript-api>=0.6.2",
]

[project.scripts]
youtube-transcript = "youtube_transcript.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["youtube_transcript"] 